--- a/to-do/style.css
+++ b/to-do/style.css
@@ -1,20 +1,27 @@
 * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
     background-color: #f4f4f4;
 }
 
 h1{
     text-align: center;
+    margin-top: 20px;
+    padding-top: 10px;
 }
 
 .contenedor{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
+    padding-top: 10px;
 }
 
 .nuevaTarea{
     width: 450px;
-    margin: 0 auto;
+    margin: 20px auto;
     height: 30px;
     font-size: 18px;
     font-style: italic;
